change new.html file

--- a/new.html
+++ b/new.html
@@ -68,7 +68,7 @@
             <h1 class="title">EIRÉ HOW: HƯỚNG NỘI MUA NẾN</h1>
             <p class="description">Bí kíp mua sắm dành cho người sống khép kín. Người hướng nội ơi, hãy thoải mái mua sắm tại website của chúng tôi mà không cần lo ngại! Mọi sản phẩm đều được giới thiệu chi tiết, dễ dàng tìm kiếm và chọn lựa chỉ với vài cú click.
             </p>
-            <button class="cta-button">ĐI NGAY NÀO</button>
+            <a href="new1.html" class="cta-button">ĐI NGAY NÀO</a>
         </div>
     </div>
     <hr style="max-width: 1250px; border-color: #000; margin-bottom: 50px;">
