change new1.html file

--- a/new1.html
+++ b/new1.html
@@ -24,10 +24,10 @@
             PHẨM</span></a>
         </li>
         <li class="nav-item mx-4">
-            <a class="nav-link" href="#" style="font-weight: 800; font-size: 18px; color: black;">VỀ CHÚNG TÔI</a>
+            <a class="nav-link" href="About1.html" style="font-weight: 800; font-size: 18px; color: black;">VỀ CHÚNG TÔI</a>
         </li>
         <li class="nav-item mx-4">
-            <a class="nav-link" style="font-weight: 800; font-size: 18px; color: black;" href="#">HỎI ĐÁP</a>
+            <a class="nav-link" href="answer.html" style="font-weight: 800; font-size: 18px; color: black;">HỎI ĐÁP</a>
         </li>
         </ul>
     </div>
@@ -39,7 +39,7 @@
     <div class="collapse navbar-collapse" style="flex-grow: 0">
         <ul class="navbar-nav " style="margin: 0;">
         <li class="nav-item mx-4">
-            <a class="nav-link" style="font-weight: 800; font-size: 18px; color: black;" href="#">TIN TỨC</a>
+            <a class="nav-link" href="new.html" style="font-weight: 800; font-size: 18px; color: black;">TIN TỨC</a>
         </li>
         <li class="nav-item mx-4">
             <input
